// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should add "active" class if favorites button isActive 1`] = `
<NavLink
  activeClassName="active"
  aria-current="page"
  className="Button favorites"
  onClick={[Function]}
  to="/favorites"
>
  Favorites
  <div
    className="favorites-badge"
  >
    2
  </div>
</NavLink>
`;

exports[`Button should add "active" class if isActive 1`] = `
<NavLink
  activeClassName="active"
  aria-current="page"
  className="Button people"
  onClick={[Function]}
  to="/people"
>
  People
</NavLink>
`;

exports[`Button should match the snapshot 1`] = `
<NavLink
  activeClassName="active"
  aria-current="page"
  className="Button people"
  onClick={[Function]}
  to="/people"
>
  People
</NavLink>
`;

exports[`Button should render favorites button 1`] = `
<NavLink
  activeClassName="active"
  aria-current="page"
  className="Button favorites"
  onClick={[Function]}
  to="/favorites"
>
  Favorites
  <div
    className="favorites-badge"
  >
    2
  </div>
</NavLink>
`;
